--- a/FaceAnalysisApp.csproj
+++ b/FaceAnalysisApp.csproj
@@ -10,6 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.22.1" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
+
+	  <None Include="models\scrfd_500m.onnx">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+
   </ItemGroup>
+
+	
+
+
+
 
 </Project>
