Got the box dimensions

--- a/FaceAnalysisApp.csproj
+++ b/FaceAnalysisApp.csproj
@@ -15,6 +15,14 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 
+	  <None Include="models\scrfd_2.5g.onnx">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+
+	  <None Include="test.jpg">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+
   </ItemGroup>
 
 	
